fix home screen layout issue

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,11 +9,6 @@
   font-family: AvenirNextLTPro-Bold;
 }
 
-.display-message-container {
-  float: left;
-  margin-left: 0px;
-}
-
 ul {
   list-style-type: disc;
   display: block;
